XWIKI-19108: TestContainer-based tests can fail to execute correctly on Java 17 with Jetty 10.x